# unplugin-imagemin

./: .eslintrc  .gitignore  .prettierignore  .prettierrc  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsup.config.ts  turbo.json
.github/: FUNDING.yml  stale.yml
.github/ISSUES_TEMPLATE/: bug_report.yml  feature_request.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
examples/farm-vue/: farm.config.ts  package.json
examples/farm-vue/src/: App.vue
examples/rsbuild-vue/: package.json
playground/: index.html  package.json  vite.config.ts  vite.config.ts.timestamp-1669725971521.mjs  vite.config.ts.timestamp-1669728787211.mjs  vite.config.ts.timestamp-1670039596190.mjs  vite.config.ts.timestamp-1670055739410.mjs  vite.config.ts.timestamp-1674630390292.mjs
playground/nuxt/: app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml
playground/nuxt/.nuxt/: components.d.ts  imports.d.ts  tsconfig.json  (+1 more)
playground/src/: App.vue  main.ts  style.css
playground/vite/: vite.config.ts
playground/vite-react/: package.json
playground/vite-vue2/: package.json
playground/vite-vue3/: package.json  vite.config.ts
rust-imagemin/: Cargo.toml
rust-imagemin/src/: lib.rs
scripts/: postbuild.ts
src/: esbuild.ts  farm.ts  hook.ts  index.ts  nuxt.ts  rollup.ts  test.ts  vite.ts  webpack.ts
src/core/: cache.ts  compressOptions.ts  context.ts  devalue.ts  encodeMap.ts  error.ts  fileHandler.ts  gradient.ts  imageProcess.ts  index.ts  log.ts  sharp.ts  squoosh.ts  svgo.ts  transform.ts  types.ts  unplugin.ts  utils.ts
test/: index.test.ts
(+28 files in other folders)
